# FILE-O

./: .gitignore  CMakeLists.txt  Notes.md  README.md  main.cpp
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
algorithms/: CMakeLists.txt  Sorting.hpp
cmake/: Components.cmake
conan/: conanfile.txt
docker/: Dockerfile  build.sh  run.sh
fileo/: CMakeLists.txt  main.cpp
fileo/rsrc/qml/: Main.qml
rsrc/qml/: FileList.qml  Main.qml
scripts/: configure.sh
src/: CMakeLists.txt
src/fileo/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_traverse_directory.cpp
